Thu Jan 12 01:42:08 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* test/ruby/test_io.rb (test_autoclose_true_closed_by_finalizer,
	  test_autoclose_true_closed_by_finalizer): skip if IO objects are
	  not recycled yet. [ruby-dev:45098] [Bug #5850]

Thu Jan 12 01:41:34 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* lib/tempfile.rb (Tempfile#_close): clear @tempfile and @data[1] even
	  when exception is raised at @tempfile.close. [ruby-dev:45113]

	* lib/tempfile.rb (Tempfile#unlink): fix a typo.

Thu Jan 12 01:41:13 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* gc.c (run_finalizer): clear rb_thread_t::errinfo when ignore
	  an exception under rb_protect(). [ruby-dev:45113]

Thu Jan 12 01:40:33 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_io.rb (TestIO#test_autoclose): Tempfile.new doesn't
	  accept the block argument.

Sat Jan  7 22:46:36 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb: use private instead of _xxx
	  method name. This is Ruby code not Python code.
	  refs #5696

Tue Jan 03 23:57:37 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/rexml/parsers/baseparser.rb: rexml BaseParser uses
	  instance_eval unnecessarily on listener add.
	  patch from Charles Nutter. [Bug #5696] [ruby-core:41437]

Tue Jan 03 19:13:05 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* test/rexml/test_sax.rb: add require 'rexml/document'.
	  [Backport #5834] [ruby-dev:45079]

Tue Jan  3 19:05:42 2012  Naohisa Goto  <ngotogenome@gmail.com>

	* include/ruby/defines.h (FLUSH_REGISTER_WINDOWS): move sparc asm code
	  to a separete file sparc.c for preventing inlining optimization.
	  Patched by Jurij Smakov. [Bug #5244] [ruby-core:40685]
	* sparc.c (rb_sparc_flush_register_windows): ditto.
	* configure.in: ditto.

Mon Jan  2 23:52:20 2012  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/readline.c (Init_readline): libedit check
	  rl_getc_function only when rl_initialize() is called, and