@@ -1,5 +1,5 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 25
+#define RUBY_PATCHLEVEL 26
 
 #define RUBY_RELEASE_DATE "2012-01-13"
 #define RUBY_RELEASE_YEAR 2012
