@@ -1,3 +1,13 @@
+Thu Jan 12 13:52:13 2012  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* cont.c (cont_restore_0): prevent optimizing out `sp'. sp is used for
+	  reserving a memory space with ALLOCA_N for restoring machine stack
+	  stored in cont->machine_stack, but clang optimized out it (and
+	  maybe #5851 is also caused by this).
+	  This affected TestContinuation#test_check_localvars.
+
+	* cont.c (cont_restore_1): revert workaround introduced in r32201.
+
 Thu Jan 12 01:42:08 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>
 
 	* test/ruby/test_io.rb (test_autoclose_true_closed_by_finalizer,
